Added one image for each recipe in seperate images folder and added comments to index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipe Book!</title>
 </head>
+
+<!-- Boilerplate HTML language + Title for webpage-->
+
 <body>
     <h1>This is Nick's Recipe list, Practice for Odin</h1>
+
+    <!-- Header describing index page-->
+
+    <p>
+        This is a list of some of my favorite recipes. I make all three of these recipes a lot, 
+        and I usually have leftovers from at <em>least</em> one of these three recipes in my fridge at any given time.
+    </p>
+
+    <!-- Description paragraph 1-->
+
+    <p>
+        They're especially good if I'm ever missing home or family. Just one bite of the lemon or fudge oatmeal bars takes me back to
+        summer evenings, standing bearfoot on the back porch of my home, listening to the birds. 
+    </p>
+
+    <!--Description paragraph 2-->
+
     <ul>
         <li><a href="./recipes/spicypasta.html">Spicy Pasta</a></li>
         <li><a href="./recipes/fudgeoatmealbars.html">Fudge Oatmeal Bars</a></li>
         <li><a href="./recipes/lemonbars.html">Lemon Bars</a></li>
     </ul>
+
+    <!--List of recipe links-->
 </body>
 </html>
