Added Images Added Image description to spicy spaghetti test if this will add to content of commit msg instead of title

--- a/recipes/spicypasta.html
+++ b/recipes/spicypasta.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Spicy Pasta Perfect for Meal Prep</h1>
     <p>
-        <img src = "./images/spicyspaghettiimage.jpg">
+        <img src = "./images/spicyspaghettiimage.jpg" alt = "Spicy pasta on a picnic table">
+        
     </p>
 </body>
 </html>
