Commit 1.8 Added ingredients to spicy spaghetti Added instructions to spicy spaghetti Added description to spicy spaghetti

--- a/recipes/spicypasta.html
+++ b/recipes/spicypasta.html
@@ -9,8 +9,51 @@
 <body>
     <h1>Spicy Pasta Perfect for Meal Prep</h1>
     <p>
-        <img src = "./images/spicyspaghettiimage.jpg" alt = "Spicy pasta on a picnic table">
-        
+        <img src = "./images/spicyspaghettiimage.jpeg" alt = "Spicy pasta on a picnic table">
     </p>
+    <p>
+        This spicy spaghetti recipe is one that I make <em>all</em> the time. It's simple, easy,
+        and surprisingly delicious. It's best served fresh, but can store in the freezer up to three 
+        months and can be re-heated easily.
+    </p>
+
+    <p>
+        <h4>Ingredients</h4>
+    </p>
+    <ul>
+        <li>28 Oz can San Marzano tomatoes</li>
+        <li>1 lb (around 4 links) good spicy italian sausage</li>
+        <li>4 cloves Garlic</li>
+        <li>1/2 tablespoon Red Pepper flakes</li>
+        <li>Good olive oil</li>
+        <li>2 Tablespoon honey</li>
+        <li>Salt and Pepper, to taste</li>
+        <li>Fresh Basil</li>
+    </ul>
+    <p>
+        <h4>Instructions</h4>
+    </p>
+    <ol>
+        <li>Heat a high-walled saucepan to medium-high heat. Cover bottom of pan with olive oil.
+             Once the pan is up to temperature,
+            add italian sausage links to the pan. Heat until nearly cooked through and the outside
+            is a rich golden-brown, about 10 minutes
+        </li>
+        <li>
+            While the sausage is cooking, mince garlic and measure out red pepper flakes. Once sausage
+            is nearly cooked through, add Garlic and red pepper flake and fry in oil for one minute, stirring constantly
+        </li>
+        <li>
+            After Garlic is browned and oil is fragrent from red pepper flake, add in 28 oz. can of tomatoes followered by
+            the two tablespoons of honey. Stir to ensure garlic is off the bottom of the pan.
+        </li>
+        <li>
+            Cook until the acidity of the tomatoes have mellowed out and the sausage links are fully cooked through, about 20 minutes.
+            Add salt and pepper to taste.
+        </li>
+        <li>
+            Serve over your favorite pasta and add fresh basil as a garnish. Leftover sauce can be saved in the freezer up to three months.
+        </li>
+    </ol>
 </body>
 </html>
