--- a/recipes/lemonbars.html
+++ b/recipes/lemonbars.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Tasty Summer Lemon Bars</h1>
     <p>
-        <img src = "images/lemonbarimage.jpeg" alt = "Lemon Bar">
+        <img src = "./images/lemonbarimage.jpeg" alt = "Lemon Bar">
     </p>
 </body>
 </html>
