--- a/recipes/fudgeoatmealbars.html
+++ b/recipes/fudgeoatmealbars.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Fudge Oatmeal Bars for Camping</h1>
     <p>
-        <img src = "./images/fudgeoatmealbarimage" alt = "Fudge Oatmeal Bar">
+        <img src = "./images/fudgeoatmealbarimage.jpg" alt = "Fudge Oatmeal Bar">
     </p>
     <p>
         This Fudge oatmeal bar recipe is a family tradition. They were first sold by my grandmother at her cafe in Klamath Falls Oregon. 
