--- a/recipes/spicypasta.html
+++ b/recipes/spicypasta.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Spicy Pasta Perfect for Meal Prep</h1>
     <p>
-        <img src = "./images/spicyspaghettiimage" alt = "Spicy pasta on a picnic table">
+        <img src = "./images/spicyspaghettiimage.jpg" alt = "Spicy pasta on a picnic table">
     </p>
     <p>
         This spicy spaghetti recipe is one that I make <em>all</em> the time. It's simple, easy,
