Commit 1.11 Fixed image links on recipe pages Added ingredients for Lemon Bars Added instructions for Lemon Bars

--- a/recipes/lemonbars.html
+++ b/recipes/lemonbars.html
@@ -11,5 +11,41 @@
     <p>
         <img src = "./images/lemonbarimage.jpeg" alt = "Lemon Bar">
     </p>
+    <p>
+        This Fudge oatmeal bar recipe is a family tradition. They were first sold by my grandmother at her cafe in Klamath Falls Oregon. 
+        These fudge oatmeal bars are warm, chocolately, buttery, and save extremely well. They've earned legendary status with my camping
+        group. 
+    </p>
+
+    <p>
+        <h4>Ingredients</h4>
+    </p>
+    <ul>
+        <li>1/2 Cup Butter</li>
+        <li>1/2 Cup Powdered Sugar </li>
+        <li>1 Cup sifted flour</li>
+        <li>1/8 tablespoon salt</li>
+        <li>1 cup sugar</li>
+        <li>2 tablespoons flour</li>
+        <li>2 Eggs lightly beaten</li>
+        <li>2 tablespoons lemon juice</li>
+        <li>Zest of 1 lemon</li>
+    </ul>
+    <p>
+        <h4>Instructions</h4>
+    </p>
+    <ol>
+        <li>Mix softened butter with powered sugar, sifted flour and salt. Pat into 9x9 pan and bake at 350 for 20 mins
+        </li>
+        <li>
+            Mix together 2 tablespoons flour and 1 cup sugar. Mix with Eggs, lemon juice, lemon zest.
+        </li>
+        <li>
+            Pour lemon mixture over baked crust, bake at 325 for 25 minutes
+        </li>
+        <li>
+            top with powdered sugar
+        </li>
+    </ol>
 </body>
 </html>
